# opentrend.dev

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  compose.yaml  prek.toml  pyproject.toml  tailwind.config.js
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  81e1e0bb9c0d_add_defaults_to_github_snapshot_integer_.py  d625d4d78acf_add_public_flag_to_projects.py
scripts/: backfill_reach.py
src/opentrend/: __init__.py  app.py  config.py  crypto.py  db.py  distro_defs.py  distro_fetchers.py  github_utils.py  logging.py  metrics.py  types.py
src/opentrend/auth/: github.py
src/opentrend/collectors/: aur.py  base.py  chocolatey.py  crates.py  distro.py  github.py  go.py  maven.py  npm.py  nuget.py  packagist.py  pypi.py  registry.py  rubygems.py  traffic.py
src/opentrend/models/: __init__.py  project.py  (+2 more)
tests/: conftest.py  test_business_metrics.py  test_config.py  test_crypto.py  test_metrics.py
tests/test_auth/: test_github.py
tests/test_collectors/: conftest.py  test_aur.py  test_chocolatey.py  test_crates.py  test_distro.py  test_github.py  test_go.py  test_maven.py  test_npm.py  test_nuget.py  test_packagist.py  test_pypi.py  test_registry.py  test_rubygems.py  test_traffic.py
tests/test_models/: test_project.py  test_user.py
tests/test_routes/: test_auth.py  test_dashboard.py  test_guides.py  test_home.py  test_projects.py  test_route_helpers.py
tests/test_scheduler/: test_jobs.py
tests/test_services/: test_dashboard.py  test_discovery.py  test_project.py
(+70 files in other folders)
